syntax = "proto2";
package PTP.Auth;
import "PTP.Common.proto";
option java_package = "chat.wai.protobuf";

option optimize_for = LITE_RUNTIME;

message AuthNativeReq{
  required uint64 accountId = 1;
  required string entropy = 2;
  optional string session = 3;
}

message AuthNativeRes{

}

message AuthStep1Req{
  required bytes p = 1;
}

message AuthStep1Res{
  required bytes q = 1;
  required string address = 2;
  required bytes sign = 3;
  required uint64 ts = 6;
  required Common.ERR err = 100;
}

message AuthStep2Req{
  required uint64 ts = 1;
  required string address = 2;
  required bytes sign = 3;
}

message AuthStep2Res{
  required Common.ERR err = 100;
}

message AuthPreLoginReq{
  required bytes sign1 = 1;
  required string address1 = 2;
  required bytes sign2 = 3;
  required string address2 = 4;
  required uint64 ts = 5;
}

message AuthPreLoginRes{
  required string uid = 1;
  required uint64 ts = 2;
  required Common.ERR err = 100;
}

message AuthLoginReq{
  required string sign = 1;
  optional Common.ClientInfo clientInfo = 2;
}

message AuthLoginRes{
  optional Common.ERR err = 100;
}

message UploadProfilePhotoReq{
  required string id = 1;
  required bool is_video = 2;
  required string thumbnail = 3;
}

message UploadProfilePhotoRes{
  optional string payload = 1;
  required Common.ERR err = 100;
}

message UpdateProfileReq{
  optional string firstName = 1;
  optional string lastName = 2;
  optional string about = 3;
}

message UpdateProfileRes{
  required Common.ERR err = 100;
}

message UpdateUsernameReq{
  required string username = 1;
}

message UpdateUsernameRes{
  required Common.ERR err = 100;
}

message InitAppRes{
  optional string chats = 1;
  optional string messages = 2;
  optional string chatFolders = 3;
  optional string users = 4;
  optional string topCats = 5;
  optional Common.ERR err = 100;
}
